# agentid-sdk

./: .gitignore  Cargo.toml  README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml  setup.py
bindings/python/agentid/: __init__.py
bindings/python/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  identity.rs  lib.rs  rotation.rs  trust.rs  verification.rs
crates/core/tests/basic_flows/: identity_flows.rs  mod.rs  trust_flows.rs
crates/core/tests/complex_flows/: complex_flows.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encryption.rs  error.rs  keys.rs  lib.rs  rotation.rs  signatures.rs
crates/trust/: Cargo.toml
crates/trust/src/: attributes.rs  error.rs  lib.rs  lifecycle.rs  relationships.rs  rotation.rs  score.rs  verification.rs
crates/trust/tests/: basic_flows.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/verify/: Cargo.toml
crates/verify/src/: lib.rs  rotation.rs
crates/verify/tests/: basic_flows.rs
demo/: Cargo.toml
demo/src/: main.rs
examples/python/: README.md  demo.py  requirements.txt
