[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-rust>=0.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentid"
version = "0.1.0"
description = "Python bindings for AgentID SDK"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
] 