[package]
name = "agentid-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic primitives for AgentID SDK"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true

# Crypto-specific dependencies
ring.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true

# Internal dependencies
agentid-types = { path = "../types" }

[dev-dependencies]
criterion.workspace = true
mockall.workspace = true 