[package]
name = "agentid-trust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Trust framework for Agent Commerce Kit Identity (ACK ID)"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true

# Internal dependencies
agentid-core = { path = "../core" }
agentid-crypto = { path = "../crypto" }

[dev-dependencies]
criterion.workspace = true
mockall.workspace = true 