[package]
name = "agentid-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for AgentID SDK"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
