[package]
name = "agentid-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Verification logic for Agent Commerce Kit Identity (ACK ID)"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Internal dependencies
agentid-types = { path = "../types" }
agentid-crypto = { path = "../crypto" }
agentid-trust = { path = "../trust" }

[dev-dependencies]
criterion.workspace = true
mockall.workspace = true 